{
    "name": "Player2",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "34318b98-d70f-4834-817b-e8f09fb661a9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1ec0e950-5624-403f-804c-b8ccf6acdd27",
                    "expectedControlType": "",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "271d8e83-86a7-437f-a15a-015b455edd78",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9278e8d7-cc7d-4fa0-8af8-8dbb619d826c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34b6de83-c323-4253-9901-92e3d4dbe176",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}